# file-parser

./: Cargo.toml  Readme.md
src/: file_types.rs  main.rs
