[package]
description = "A simple file parser that reads a file and converts to another file extension"
name = "file_converter"
version = "0.1.0"
authors = ["Ayomide Bajo <oluwashinabajo@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
